# dense_sparse_extractor

./: .gitignore  README.md  __init__.py  data.py  pyproject.toml  requirements.txt  train.py
configs/model/: baseline_mlp.yaml  baseline_vit.yaml
configs/training/: baseline.yaml
dense_sparse_extractor/: __init__.py  data.py  densae.py  train.py  utils.py
dense_sparse_extractor/models/: __init__.py  convnet.py  mlp.py  vit.py
experiments/: combined_recon.py  toy_parameter_sweep.py
models/: __init__.py  vit.py
notebooks/: __init__.py  compositional_dense_sparse_feature_generator_notebook.py  dataset_visualization.py  evaluate.py  loop_generator.py  mnist_feature_extract.py  sae_dinov2_feature_extractor.ipynb  sae_dinov2_feature_extractor.py  scratchpad.py  toy_dense_sparse_embed.py
